Getting Started URL updated

--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 Basic Phonegap (cordova) & JQuery Mobile Starter
 
-1. Follow http://phonegap.com/start for your platform,
+1. Follow http://docs.phonegap.com/guide_getting-started_index.md.html for your platform,
 2. Copy these files into www directory
 
 Projects sites:
