splitview clean up

--- a/README
+++ b/README
@@ -6,3 +6,4 @@ Basic Phonegap (cordova) & JQuery Mobile Starter
 Projects sites:
 Phonegap: http://phonegap.com
 Jquery Mobile: http://jquerymobile.com
+Splitview: https://github.com/asyraf9/jquery-mobile/
