updated to jquery mobile 1.2.0 and added 960 grid

--- a/README
+++ b/README
@@ -6,4 +6,5 @@ Basic Phonegap (cordova) & JQuery Mobile Starter
 Projects sites:
 Phonegap: http://phonegap.com
 Jquery Mobile: http://jquerymobile.com
+960 GridView: http://jeromeetienne.github.com/jquery-mobile-960/
 Splitview: https://github.com/asyraf9/jquery-mobile/
