--- a/README
+++ b/README
@@ -8,3 +8,4 @@ Phonegap: http://phonegap.com
 Jquery Mobile: http://jquerymobile.com
 960 GridView: http://jeromeetienne.github.com/jquery-mobile-960/
 Splitview: https://github.com/asyraf9/jquery-mobile/
+Store: https://github.com/jonathanstark/boutique
